# awd-cmd

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.MD  STEPS.MD  awd.py  config.yml  docker-compose.yml  pyproject.toml  requirements.txt  ssh.py
core/: process.py  storage.py
model/: traffic.py
monitor/: watch.py
monitor/cpython/Modules/: Setup.local  config.c  ld_so_aix
waf/: intercept.php  waf.php  watchbird.php
